refactoring for generalized processing client use to abstract the front-end from any requirement in knowing implementation classes