@@ -6,33 +6,36 @@ import java.util.*;
 import java.net.*;
 import java.io.*;
 import javax.activation.DataHandler;
+import au.edu.murdoch.ccg.yabi.objects.BaatInstance;
+import au.edu.murdoch.ccg.yabi.objects.User;
 
-public class GrendelClient {
+public class GrendelClient extends GenericProcessingClient {
 
     public static String grendelUrl = "http://grendel.localdomain:8080/axis-1_2_1/services/grendel";
 
-    public static long submitXMLJob (String xmlString, ArrayList attachments) throws Exception {
-        String[] attachArray = new String[attachments.size()];
+    //instance variables
+    private ArrayList inFiles;
+    private ArrayList outFiles;
+    private BaatInstance bi;
 
-        Iterator iter = attachments.iterator();
-        int count = 0;
-        while (iter.hasNext()) {
-            String attach = (String) iter.next();
-            attachArray[count] = attach;
-            count++;
-        }
-
-        return submitXMLJob(xmlString, attachArray);
+    //constructors
+    public GrendelClient( BaatInstance bi ) {
+        inFiles = new ArrayList();
+        outFiles = new ArrayList();
+        //we need to store the BaatInstance in this object so that we can modify it based on stagein of data
+        this.bi = bi;
     }
 
-    public static long submitXMLJob (String xmlString, String attachment) throws Exception {
-        String[] attachArray = new String[1];
-        attachArray[0] = attachment;
-
-        return submitXMLJob(xmlString, attachArray);
+    public GrendelClient() {
+        inFiles = new ArrayList();
+        outFiles = new ArrayList();
     }
 
-    public static long submitXMLJob (String xmlString, String[] attachments) throws Exception {
+    //instance methods
+    public long submitJob () throws Exception {
+        //convert Baat into its XML
+        String xmlString = bi.exportXML();
+
         //create SOAP message
         MessageFactory factory = MessageFactory.newInstance();
         SOAPMessage message = factory.createMessage();
@@ -43,7 +46,7 @@ public class GrendelClient {
         Name bodyName = soapFactory.createName("submitXMLJob", "", "urn:Grendel");
         SOAPBodyElement bodyElement = body.addBodyElement(bodyName); 
     
-        //add out xmlString as an argument
+        //add our xmlString as an argument
         Name name = soapFactory.createName("task");
         SOAPElement xmlStringElem = bodyElement.addChildElement(name);
         xmlStringElem.addTextNode(xmlString); 
@@ -54,23 +57,17 @@ public class GrendelClient {
       
         java.net.URL endpoint = new URL(grendelUrl);
 
-        //add attachments
-        if (attachments != null) {
-            for (int i = 0; i < attachments.length; i++ ) {
-                try {
-                    URL url = new URL(attachments[i]);
-                    //test if the file exists
-                    URI uri = new URI(attachments[i]);
-                    if (new File(uri).exists()) {
-                        DataHandler dataHandler = new DataHandler(url);
-                        AttachmentPart attachment = message.createAttachmentPart(dataHandler);
-                        attachment.setContentId("attached_file");
+        //add attachment zip file
+        if (bi.getAttachedFile() != null) {
+            try {
+                URL url = new URL(bi.getAttachedFile());
+                DataHandler dataHandler = new DataHandler(url);
+                AttachmentPart attachment = message.createAttachmentPart(dataHandler);
+                attachment.setContentId("attached_file");
 
-                        message.addAttachmentPart(attachment);
-                    } //TODO add an else condition to throw an error for a missing input file
-                } catch (Exception e) {
-                    //ignore faulty files
-                }
+                message.addAttachmentPart(attachment);
+            } catch (Exception e) {
+                //ignore faulty files
             }
         }
 
@@ -90,7 +87,7 @@ public class GrendelClient {
 
             connection.close();
 
-            throw new Exception(string);
+            throw new Exception("SOAP Fault: " + string);
 
         } else {
 
@@ -118,7 +115,7 @@ public class GrendelClient {
 
     }
 
-    public static String getJobStatus (String jobId) throws Exception {
+    public String getJobStatus (String jobId) throws Exception {
         MessageFactory factory = MessageFactory.newInstance();
         SOAPMessage message = factory.createMessage();
 
@@ -164,6 +161,26 @@ public class GrendelClient {
             return wantedElement.getValue();
 
         }
+    }
+
+    public void fileStageIn ( ArrayList files ) throws Exception {
+        //file stagein for grendel is zip and submit as an attachment to the job
+        inFiles = files;
+
+        //zip up all the input files and add the zipfile to the Baat
+        String zipFileName = new Date().getTime() + ".zip";
+        Zipper.createZipFile( zipFileName , "/tmp/", inFiles );
+
+        bi.setAttachedFile("file:///tmp/" + zipFileName);
+    }
+
+    public void fileStageOut ( ArrayList files ) throws Exception {
+        //file stageout for grendel is downloading and unzipping the results file
+    }
+
+    public boolean authenticate ( User user ) throws Exception {
+        //grendel has no authentication yet
+        return true;
     }
 
 }
